--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,12 @@
     "@hookform/resolvers": "^5.0.1",
     "@react-spring/web": "^10.0.1",
     "@tailwindcss/vite": "^4.1.8",
+    "@use-gesture/react": "^10.3.1",
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.1",
-    "react-tinder-card": "^1.6.4",
     "tailwindcss": "^4.1.8",
     "zod": "^3.25.42"
   },
